# recsys

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
docs/swagger/: schema.yml
helpers/: metrics.py  unpickler.py  visualization.py
notebooks/: ann_als.ipynb  autoencoder.ipynb  dssm.ipynb  first_step.ipynb  metrics_and_visualization.ipynb  second_step.ipynb  userknn.ipynb
service/: response.py
service/api/: app.py  auth.py  exception_handlers.py  exceptions.py  views.py
service/api/errors/: app.py  auth.py  http.py
service/api/models/: ann.py  models.py  ngt_recommender.py  offlinereco.py  pop.py  simplelist.py  userknn.py  userknnreco.py
service/api/routes/: healthcheck.py  recs.py
service/api/types/: error.py  health.py  model.py  recommendations.py
tests/: conftest.py
tests/api/: test_auth.py  test_views.py
tests/overrides/: authoverride.py  noauth.py
user2item/: grp  prf  tre
