[tool.poetry]
name = "reco_service"
version = "0.0.1"
description = ""
authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
uvicorn = "^0.23.0"
orjson = "^3.9.10"
starlette = "^0.27.0"
httpx = "^0.22.0"  # for starlette.testclient
pydantic-settings = "^2.0.3"
numpy = "1.26.1"
pandas = "1.5.3"
scipy = "1.11.3"
implicit = "0.7.2"
appnope = "0.1.3"
asttokens = "2.4.1"
attrs = "23.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.2"
comm = "0.2.0"
contourpy = "1.2.0"
cycler = "0.12.1"
debugpy = "1.8.0"
decorator = "5.1.1"
exceptiongroup = "1.1.3"
executing = "2.0.1"
fastjsonschema = "2.18.1"
fonttools = "4.44.0"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.1"
ipykernel = "6.26.0"
ipython = "8.17.2"
ipywidgets = "8.1.1"
jedi = "0.19.1"
jsonschema = "4.19.2"
jsonschema-specifications = "2023.7.1"
jupyter-client = "8.6.0"
jupyter-core = "5.5.0"
jupyterlab-widgets = "3.0.9"
kiwisolver = "1.4.5"
llvmlite = "0.41.1"
matplotlib = "3.8.1"
matplotlib-inline = "0.1.6"
nbformat = "5.9.2"
nest-asyncio = "1.5.8"
numba = "0.58.1"
packaging = "23.2"
parso = "0.8.3"
pexpect = "4.8.0"
pillow = "10.1.0"
platformdirs = "3.11.0"
plotly = "5.18.0"
prompt-toolkit = "3.0.39"
psutil = "5.9.6"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.16.1"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyzmq = "25.1.1"
rectools = "0.4.1"
referencing = "0.30.2"
requests = "2.31.0"
rpds-py = "0.12.0"
six = "1.16.0"
stack-data = "0.6.3"
tenacity = "8.2.3"
threadpoolctl = "3.2.0"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.13.0"
typeguard = "2.13.3"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
wcwidth = "0.2.9"
widgetsnbextension = "4.0.9"
zipp = "3.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
requests = "^2.31.0"
mypy = "^1.6.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pylint = "^3.0.2"
black = "^23.10.1"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
